tests/diagnostics/comments/doc_comments/trailing/expect.txt
# exit: 1
input/main.lang0:4:1: error: doc comment must document a declaration
  /// Trailing docs are invalid.
  ^
